<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">487118931333654</string>
     
    <string name="app_name">Smart Kitchen</string>
    <string name="cdl">Laurea Magistrale in Informatica</string>
    <string name="esame">Esame di Intelligenza Artificiale</string>
    <string name="progetto">Smart Home Environment\nC@SA</string>
    <string name="sviluppato">Developed by Labianca M. - All rights reserved © 2015</string>
    <string name="action_settings">Configurazioni</string>
    <string name="activityAccesso">Accesso</string>
    <string name="login">Login</string>
    <string name="oppure">oppure accedi con</string>
    <string name="password">Password</string>
    <string name="restaCollegato">Resta collegato</string>
    <string name="passwordDimenticata"><u>Password dimenticata?</u></string>
    <string name="loginButton">Entra</string>
    <string name="registrationButton">Registrati</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    
    <string name="mondoLogin">Accedi con le tue credenziali Mondo</string>
    
    <string name="formRegistrazione">Registrati al sistema per poter accedere alle funzionalità del sistema C@SA.\nProcedi con la compilazione dei campi sottostanti ed effettua l\'accesso nella sezione di login.</string>
    <string name="registrazione">Registrazione</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="mail">Email</string>
    <string name="username">Username</string>
    <string name="password2">Ripeti password</string>
    <string name="activityMain">Opzioni</string>

    <string name="activityPassword">Password dimenticata</string>
    <string name="formPassword">Recupera le tue credenziali per poter accedere alle funzionalità del sistema C@SA.\nInserisci l\'indirizzo email utilizzata per la registrazione. \nIl sistema invierà una mail contenente i dati di accesso nella tua casella di posta elettronica.</string>
    <string name="sendMailButton">Invia Mail</string>
    
    <string-array name="opzioni_array">
        <item>Avvio veloce</item>
        <item>Data e Ora</item>
        <item>Meteo</item>
        <item>Componenti</item>
        <item>Sensori</item>
        <item>Info utente</item>
        <item>Impostazioni app</item>
    </string-array>

	<string name="text_fragment_avvioveloce1">\nSeleziona una delle quattro configurazioni predefinite per avviare velocemente la simulazione oppure definisci una configurazione personalizzata modificando i parametri disponibili nelle altre sezioni dell\'applicazione.</string>
    <string name="text_fragment_avvioveloce2">Clicca sul pulsante a destra per utilizzare le condizioni meteo della tua posizione attuale.</string>
    <string name="text_fragment_infoutente">In questa sezione puoi modificare lo stato dell\'utente all\'interno dell\'ambiente cucina.\nPotrai definire la sua presenza all\'inizio della simulazione e definire opzionalmente una attività che sta o deve svolgere</string>
    <string name="text_fragment_sim1">Impostazioni simulazione</string>
    <string name="text_fragment_sim2">Data:</string>
    <string name="text_fragment_sim3">Ora:</string>
    <string name="text_fragment_sim4">Clima:</string>
    <string name="text_fragment_sim5">Componenti:</string>
    <string name="text_fragment_sim6">Sensori:</string>
    <string name="text_fragment_data1">In questa sezione puoi modificare la data e l\'ora di partenza della simulazione.\nUtilizza la configurazione attuale oppure scegli una data e un orario qualsiasi.</string>
    <string name="text_fragment_data2">Seleziona una nuova data:</string>
    <string name="text_fragment_ora1">Modifica l\'orario di partenza della simulazione.\nUtilizza l\'orario corrente o fissa un orario qualsiasi a tua discrezione.</string>
    <string name="text_fragment_ora2">Seleziona un nuovo orario:</string>
    <string name="text_fragment_meteo">In questa sezione puoi modificare le condizioni climatiche e metereologiche presenti.\nPuoi modificare la condizione climatica generale e/o modificare i singoli parametri.</string>
    <string name="text_fragment_meteo1">In alternativa, clicca sul pulsante a destra per utilizzare le condizioni meteo della tua posizione attuale.</string>
    <string name="text_fragment_componenti">In questa sezione puoi modificare lo stato di funzionamento dei componenti (acceso/spento - aperto/chiuso) presenti nell\'ambiente domestico.\nCambia lo stato dei componenti all\'avvio della simulazione.</string>
    <string name="text_fragment_sensori">In questa sezione puoi modificare lo stato di funzionamento dei sensori presenti all\'interno dell\'ambiente domestico.\nAttiva o disattiva i sensori sotto elencati.\n<b>La funzionalità è momentaneamente disabilitata</b></string>
    <string name="text_fragment_impostazioni">In questa sezione puoi modificare l\'indirizzo del server a cui inviare le richieste XML-RPC ed avviare il  Web Server.\nE\' richiesta una password di sistema per confermare l\' operazione da effettuare.</string>
    
    <string name="password_accesso">Inserisci password per accedere:</string>
	<string name="indirizzo">Modifica URL del Server:</string>
	<string name="server">Avvia il Web Server cliccando sul pulsante sottostante:</string>
	<string name="impserver">Impostazioni app</string>
	
	<string name="avvia_server">Avvia Server</string>
	<string name="cambiaImpostazioni">Impostazioni</string>
	    
    <string name="drawer_open">Apri menù di navigazione</string>
    <string name="drawer_close">Chiudi menù di navigazione</string>
    
    <string name="utente">L\'utente </string>
    <string name="checkUserPresentTrue">è presente in cucina</string>
    <string name="checkUserPresentFalse">non è presente in cucina</string>
    
    
    <string name="infoUtenteButton">Cambia Info Utente</string>
	<string name="textUtente">L\'utente</string>
	<string name="cambiaInfoUtente">Info Utente</string>
	<string name="dadovevieni">Da quale ambiente vieni?</string>
    <string name="daaltracamera">Da un\'altra camera della casa.</string>
    <string name="daesterno">Dall\'esterno della casa.</string>
    <string name="dovevai">In quale ambiente vai?</string>
    <string name="inaltracamera">In un\'altra camera della casa.</string>
    <string name="inesterno">All\'esterno della casa.</string>
    
        
    <string name="cambiaOrario">Salva Orario</string>
    <string name="cambiaData">Salva Data</string>
    <string name="startSimulazione">Avvia Simulazione</string>
    <string name="activitySimulazione">Simulazione</string>
    <string name="sens_temperatura">Rilevamento temperatura</string>
    <string name="sens_umidita">Rilevamento umidità</string>
    <string name="sens_vento">Rilevamento vento</string>
    <string name="sens_presenza">Rilevamento presenza</string>
    <string name="sens_sonoro">Rilevamento sonoro</string>
    <string name="cambiaSensori">Modifica Impostazioni</string>
    <string name="televisione">Televisione</string>
    <string name="radio">Radio</string>
    <string name="condizionatore">Condizionatore</string>
    <string name="balcone">Balcone</string>
    <string name="macchinaCaffe">Macchina del caffè</string>
    <string name="illuminazione">Illuminazione</string>
    <string name="cambiaComponenti">Modifica Impostazioni</string>
    <string name="meteo">Condizioni Generali:\n</string>
    <string name="localita">Località:</string>
    <string name="umidita">Umidità:\n</string>
    <string name="vento">Vento:\n</string>
    <string name="lumi">Luminosità esterna:\n</string>
    <string name="temperaturaInterna">Temperatura interna:\n</string>
    <string name="temperaturaEsterna">Temperatura esterna:\n</string>
    <string name="umiditaInterna">Umidità interna:\n</string>
    <string name="umiditaEsterna">Umidità esterna:\n</string>
    <string name="cambiaMeteo">Modifica Impostazioni</string>
    <string name="cucina_text">immagine cucina</string>
    
    
    <string name="confVeloceMeteo">configurazione veloce meteo</string>
    
    <string name="apri">Apri</string>
    <string name="chiudi">Chiudi</string>
    <string name="accendi">Accendi</string>
    <string name="spegni">Spegni</string>
    <string name="prendi">Prendi</string>
    <string name="riponi">Riponi</string>
    <string name="rifiuta">Nega</string>
    <string name="esci">Esci</string>
    <string name="entra">Entra</string>
    
    <string name="GPSAlertDialogTitle">Configurazione Gps</string>
    <string name="GPSAlertDialogMessage">Il dispositivo Gps è spento. Per una migliore qualità del servizio ti invitiamo ad attivarlo.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Annulla</string>
    
    <string name="impMeteo">Impostazioni simulazione</string>
    <string name="loc">Località</string>
    <string name="met">Condizioni meteo</string>
    <string name="tempin">Temperatura interna</string>
    <string name="tempout">Temperatura esterna</string>
    <string name="umidin">Umidità interna</string>
    <string name="umidout">Umidità esterna</string>
    <string name="vent">Vento</string>
    <string name="lum">Luminosità interna</string>
    <string name="data">Data e Ora</string>
    <string name="comp">Configurazione Componenti</string>
    
    <string name="riepilogo">Azioni eseguite</string>
    
    <string name="text_report">In questa sezione puoi visualizzare il report completo delle azioni eseguite durante la simulazione.\nPuoi, inoltre, salvare il report ed inviarlo via mail al tuo indirizzo di posta elettronica o ad un altro recapito.</string>
    
</resources>
