<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView
    android:id="@+id/formRegistrazioneText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/formRegistrazione"
    android:textSize="@dimen/font_text14" />

	<EditText
    android:id="@+id/cognomeEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
    android:inputType="text"
    android:textSize="@dimen/font_text16" 
    android:hint="@string/cognome" />
           	
	<EditText
    android:id="@+id/nomeEditText"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
    android:inputType="text"
    android:hint="@string/nome"
    android:textSize="@dimen/font_text16" />
    
	<EditText
    android:id="@+id/mailEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
    android:inputType="text"
    android:hint="@string/mail"
	android:textSize="@dimen/font_text16" />
    
    <EditText
	android:id="@+id/passwordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
	android:inputType="textPassword"
    android:hint="@string/password"
    android:textSize="@dimen/font_text16" />
        	
   <EditText
   android:id="@+id/password2EditText"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_marginTop="@dimen/margin10"
   android:inputType="textPassword"
   android:hint="@string/password2"
   android:textSize="@dimen/font_text16" />
   
   <RelativeLayout 
   android:layout_width="match_parent"
   android:layout_height="match_parent" >
       
       <ImageButton
       android:id="@+id/saveRegistrationButton"
       android:layout_width="@dimen/dimButtonSaveReg"
       android:layout_height="@dimen/dimButtonSaveReg"
       android:layout_alignParentBottom="true"
	   android:layout_centerHorizontal="true"
   	   android:background="@null"
       android:contentDescription="@string/registrationButton"
       android:scaleType="fitXY"
       android:onClick="saveReg"
       android:src="@drawable/save_reg" />
       
   </RelativeLayout>
    
</LinearLayout>