<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/margin5"
android:paddingLeft="@dimen/margin5"
android:paddingRight="@dimen/margin5"
android:paddingTop="@dimen/margin5" >

    <FrameLayout
	android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center" >
    
    	<ImageView
    	android:id="@+id/imageView1"
    	android:layout_width="match_parent"
		android:layout_height="300dp"
    	android:contentDescription="@string/cucina_text"
    	android:src="@drawable/cucina" />
    
    </FrameLayout>
    
    <LinearLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal" >
    
        <Button
    	android:id="@+id/buttonApri"
    	android:text="@string/apri"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
    	android:onClick="exeApri" />
            
    	<Button
   	 	android:id="@+id/buttonChiudi"
    	android:text="@string/chiudi"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
		android:onClick="exeChiudi" />
    	
    	<Button
    	android:id="@+id/buttonAccendi"
    	android:text="@string/accendi"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
    	android:onClick="exeAccendi" />
            
    	<Button
   	 	android:id="@+id/buttonSpegni"
    	android:text="@string/spegni"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
		android:onClick="exeSpegni" />
    	
    </LinearLayout>
        	
    <LinearLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal" >
    
        <Button
    	android:id="@+id/buttonPrendi"
    	android:text="@string/prendi"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
    	android:onClick="exePrendi" />
            
    	<Button
   	 	android:id="@+id/buttonLascia"
    	android:text="@string/lascia"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
		android:onClick="exeLascia" />
    	
    	<Button
    	android:id="@+id/buttonConsenti"
    	android:text="@string/consenti"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
    	android:onClick="exeConsenti" />
            
    	<Button
   	 	android:id="@+id/buttonNega"
    	android:text="@string/rifiuta"
    	android:textSize="@dimen/font_textButtonSim"
    	android:layout_width="@dimen/dimButtonSim"
		android:layout_height="wrap_content"
		android:onClick="exeRifiuta" />
    	
    </LinearLayout>
 
    <TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:paddingTop="@dimen/margin15" >
    	
    	<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
    	    
    	    <TextView 
			android:background="@drawable/cell_head" 
			android:textColor="#000" 
			android:textStyle="bold" 
			android:gravity="center_horizontal" 
			android:id="@+id/textView" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_span="2"
			android:layout_weight="1"
			android:textSize="@dimen/font_text12" 
			android:text="@string/riepilogo"
			android:padding="@dimen/marginTableMeteo" />
    	
    	</TableRow>
    	
    </TableLayout>
    
    <ScrollView
    android:id="@+id/svLayout" 
    android:layout_width="fill_parent"
	android:layout_height="match_parent" >
    	 
		<TableLayout
		android:id="@+id/tableSVlayout"     
		android:layout_height="match_parent"
		android:layout_width="match_parent" >
		    
		</TableLayout>
			
	</ScrollView>
	
</LinearLayout>