<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:facebook="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

    <com.facebook.widget.LoginButton
   	android:id="@+id/fb_login_button"
   	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
   	android:layout_marginTop="25dp"
    facebook:confirm_logout="false"
    facebook:fetch_user_info="true"
    facebook:login_text="Accedi con Facebook"
    facebook:logout_text="Esci" />
		    
	<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:text="@string/oppure"
    android:textSize="@dimen/font_text12" />
		    
	<EditText
    android:id="@+id/mailEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="text"
    android:textSize="@dimen/font_text14"
    android:hint="@string/mail" />    		
    
    <EditText
    android:id="@+id/passwordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="textPassword"
    android:textSize="@dimen/font_text14"
    android:hint="@string/password" />
    	
    <Button
   	android:id="@+id/passwordDimenticataButton"
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:layout_marginTop="5dp"
   	android:layout_gravity="right"
   	android:background="@null"
   	android:text="@string/passwordDimenticata"
   	android:textColor="@color/blu"
   	android:onClick="passwordDimenticata"
   	android:textSize="@dimen/font_text10" />

    <ImageButton
    android:id="@+id/loginButton"
    android:layout_width="@dimen/dimButtonLogin"
    android:layout_height="@dimen/dimButtonLogin"
    android:scaleType="fitXY"
    android:background="@null"
    android:layout_marginTop="@dimen/margin30"
    android:layout_gravity="center"
    android:contentDescription="@string/loginButton"
    android:onClick="login"
    android:src="@drawable/login" />
	
</LinearLayout>