<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView 
    android:id="@+id/text_fragment_meteo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_fragment_meteo" 
    android:textSize="@dimen/font_text14" />
	
	<RelativeLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="@dimen/margin5" >
        
    	<TextView
    	android:id="@+id/text_fragment_meteo1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_toLeftOf="@+id/meteoAttualeButton"
    	android:text="@string/text_fragment_meteo1"
    	android:textSize="@dimen/font_text14" />

    	<ImageButton
    	android:id="@+id/meteoAttualeButton"
    	android:layout_width="@dimen/dimButtonConf"
    	android:layout_height="@dimen/dimButtonConf"
    	android:layout_alignParentRight="true"
    	android:contentDescription="@string/confVeloceMeteo"
    	android:onClick="cambiaMeteoMenu"
    	android:padding="@dimen/margin5"
    	android:scaleType="fitXY"
    	android:src="@drawable/meteo_oggi" />
    	
    </RelativeLayout>
    
	  	
	<TableLayout
	android:id="@+id/tableSVlayout"     
	android:layout_height="wrap_content"
	android:layout_width="fill_parent" 
	android:paddingTop="@dimen/margin5">
		
<!-- 		<TableRow -->
<!-- 		    android:layout_width="fill_parent" -->
<!-- 		    android:layout_height="@dimen/margin5" > -->

<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textLocalita" -->
<!-- 		        android:layout_width="match_parent" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:layout_marginTop="@dimen/margin15" -->
<!-- 		        android:text="@string/localita" -->
<!-- 		        android:textSize="@dimen/font_text12" -->
<!-- 		        android:textStyle="bold" /> -->

<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textEditLocalita" -->
<!-- 		        android:layout_width="fill_parent" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:layout_marginTop="@dimen/margin15" -->
<!-- 		        android:layout_weight="1" -->
<!-- 		        android:textSize="@dimen/font_text12" /> -->
<!-- 		</TableRow> -->
		
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
		
	    	<TextView 
    		android:id="@+id/textMeteo"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin15"
    		android:text="@string/meteo"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />
	
			<SeekBar
			android:id="@+id/seekMeteo"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="100"
			android:progress="50" />
	
		</TableRow>
	
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textTemperaturaInterna"
    		android:layout_width="match_parent"
   		 	android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/temperaturaInterna"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />
	
			<SeekBar
			android:id="@+id/seekTemperaturaInterna"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="40"
			android:progress="20" />
	
		</TableRow>
	
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textTemperaturaEsterna"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/temperaturaEsterna"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />
	
			<SeekBar
			android:id="@+id/seekTemperaturaEsterna"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="50"
			android:progress="30" />
	
		</TableRow>
	
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textUmiditaInterna"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/umiditaInterna"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />
	
			<SeekBar
			android:id="@+id/seekUmiditaInterna"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="100"
			android:progress="50" />
	
		</TableRow>
	
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textUmiditaEsterna"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/umiditaEsterna"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />
	
			<SeekBar
			android:id="@+id/seekUmiditaEsterna"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="100"
			android:progress="50" />
	
		</TableRow>
	
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textVento"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/vento"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />

			<SeekBar
			android:id="@+id/seekVento"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="65"
			android:progress="0" />
	
		</TableRow>
	        
		<TableRow 
    	android:layout_width="fill_parent"
		android:layout_height="@dimen/margin5" >
	
			<TextView 
    		android:id="@+id/textLumi"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/margin10"
    		android:text="@string/lumi"
    		android:textStyle="bold"
    		android:textSize="@dimen/font_text12" />

			<SeekBar
			android:id="@+id/seekLumi"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="100"
			android:progress="50" />
	
		</TableRow>
		
	</TableLayout>
	
	<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   
		<ImageButton
    	android:id="@+id/cambiaMeteoButton"
    	android:layout_width="@dimen/dimButtonSave"
    	android:layout_height="@dimen/dimButtonSave"
    	android:scaleType="fitXY"
    	android:background="@null"
   	 	android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
    	android:contentDescription="@string/cambiaMeteo"
    	android:onClick="cambiaMeteo"
    	android:src="@drawable/salva" />
	
	</RelativeLayout>
	
</LinearLayout>