<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="ai.smarthome.activity.StartActivity" >

	<ImageView
    android:id="@+id/logoUnibaImage"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:src="@drawable/logo_uniba" 
    android:contentDescription= "@string/app_name" />

    <ImageView
    android:id="@+id/scrittaUnibaImage"
    android:layout_width="250dp"
    android:layout_height="100dp"
    android:layout_below="@+id/logoUnibaImage"
    android:layout_centerHorizontal="true"
    android:src="@drawable/scritta_uniba" 
    android:contentDescription= "@string/app_name" />
    
    <TextView
    android:id="@+id/cdlText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/scrittaUnibaImage"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="25dp"
    android:text="@string/cdl"
    android:textStyle="bold"
    android:textColor="@color/colore_intestazione_text"
    android:textSize="@dimen/font_text20" />
    
    <TextView
    android:id="@+id/esameText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/cdlText"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="25dp"
    android:text="@string/esame"
    android:textStyle="bold"
    android:textColor="@color/colore_intestazione_text"
    android:textSize="@dimen/font_text20" /> 
    
    <TextView
    android:id="@+id/progettoText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/esameText"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="25dp"
    android:text="@string/progetto"
    android:textStyle="bold"
    android:textColor="@color/colore_intestazione_text"
    android:textSize="@dimen/font_text20" /> 
    
    <ImageView
    android:id="@+id/logoAndroid"
    android:layout_width="46dp"
    android:layout_height="70dp"
    android:src="@drawable/android" 
    android:layout_alignParentBottom="true"
	android:contentDescription= "@string/app_name" />
    
    <TextView
    android:id="@+id/sviluppatoText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/logoAndroid"
    android:layout_toRightOf="@+id/logoAndroid"
	android:text="@string/sviluppato"
    android:textColor="@color/colore_intestazione_text"
    android:textSize="@dimen/font_text10" /> 
        
</RelativeLayout>