<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView
    android:id="@+id/formPasswordText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/formPassword"
    android:textSize="@dimen/font_text14" />

    <EditText
    android:id="@+id/mailEditText"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin25"
    android:inputType="text"
    android:hint="@string/mail"
    android:textSize="@dimen/font_text16" />
    
    <RelativeLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	
    	<ImageButton
    	android:id="@+id/sendMailButton"
    	android:layout_width="@dimen/dimButtonSaveReg"
    	android:layout_height="@dimen/dimButtonSaveReg"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true"
    	android:background="@null"
    	android:contentDescription="@string/sendMailButton"
    	android:scaleType="fitXY"
    	android:src="@drawable/mail" />
    
	</RelativeLayout>
	
</LinearLayout>