<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView 
    android:id="@+id/text_fragment_data1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_fragment_data1"
    android:textSize="@dimen/font_text14" />
	
	<TextView 
    android:id="@+id/dataText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
    android:textStyle="bold"
    android:textSize="@dimen/font_text16" />

	<TextView 
    android:id="@+id/text_fragment_data2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin10"
    android:text="@string/text_fragment_data2" 
    android:textSize="@dimen/font_text14" />
	
	<FrameLayout
	android:id="@+id/frameLayout"
    android:layout_width="280dp"
    android:layout_height="200dp"
    android:layout_gravity="center" >
        
		<CalendarView
    	android:id="@+id/calendarView"
    	android:layout_width="280dp"
    	android:layout_height="200dp"
   	 	android:layout_marginTop="@dimen/margin10" />
    	
	</FrameLayout>
	
	<TextView 
    android:id="@+id/text_fragment_ora2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin15"
    android:text="@string/text_fragment_ora2" 
    android:textSize="@dimen/font_text14" />
	
	<TimePicker
    android:id="@+id/timePicker"
    android:layout_width="130dp"
    android:layout_height="80dp" 
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/margin10" />
	
	<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
		
		<ImageButton
    	android:id="@+id/cambiaDataButton"
    	android:layout_width="@dimen/dimButtonSave"
    	android:layout_height="@dimen/dimButtonSave"
    	android:scaleType="fitXY"
    	android:background="@null"
    	android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
    	android:contentDescription="@string/cambiaData"
    	android:onClick="cambiaData"
    	android:src="@drawable/salva" />
	
	</RelativeLayout>
	
</LinearLayout>